--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "6.1.6",
     "@react-navigation/native-stack": "6.9.12",
+    "@react-navigation/stack": "^6.3.29",
     "react": "18.1.0",
     "react-native": "0.70.0",
-    "react-native-safe-area-context": "4.5.2",
-    "react-native-screens": "3.20.0"
+    "react-native-element-dropdown": "^2.12.0",
+    "react-native-gesture-handler": "^2.16.1",
+    "react-native-reanimated": "^3.10.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "3.20.0",
+    "react-native-swiper": "^1.6.0",
+    "react-native-swiper-flatlist": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
