--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/slider": "4.2.1",
-    "@react-native-firebase/app": "^19.2.2",
+    "@react-native-firebase/app": "18.1.0",
+    "@react-native-firebase/database": "18.1.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "6.1.6",
@@ -27,6 +28,7 @@
     "react-native-element-dropdown": "^2.12.0",
     "react-native-fbsdk-next": "12.1.0",
     "react-native-gesture-handler": "2.14.1",
+    "react-native-get-location": "^4.0.1",
     "react-native-paper": "3.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "4.0.0-alpha.10",
